# social-scraper

./: .env.example  .gitignore  GUIDE.md  PLAN.md  README.md  config.py  implementation_plan.md  main.py  planning.md  pyproject.toml  task.md
docs/plans/: 2026-02-19-social-scraper-design.md  2026-02-19-social-scraper-implementation.md
line_webhook/: app.py  line_handler.py
linebot/: app.py  line_handler.py
media/: ocr.py  transcriber.py
scraper/: article.py  browser.py  github.py  instagram.py  threads.py
services/: github_summarizer.py  notion.py  sheet.py  summarizer.py
tests/: test_article.py  test_browser.py  test_github.py  test_github_summarizer.py  test_instagram.py  test_integration.py  test_line_handler.py  test_main.py  test_notion.py  test_ocr.py  test_sheet.py  test_summarizer.py  test_threads.py  test_transcriber.py
tests/fixtures/: ig_post.json  ig_post_wrapped.json  ig_reel.json  threads_post.json  threads_post_wrapped.json
