[project]
name = "social-scraper"
version = "0.1.0"
description = "IG/Threads 爬蟲 + LLM 摘要工具"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "patchright>=1.58",
    "gspread>=6.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "mlx-whisper>=0.4",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "line-bot-sdk>=3.14",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
